minimal tested working example

--- a/demo/Wordnik.Dotnet.Demo/appsettings.json
+++ b/demo/Wordnik.Dotnet.Demo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Wordnik": {
+    "ApiKey": "api_key_here"
+  }
 }
