--- a/src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
+++ b/src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
@@ -2,7 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-	<OutputType>Library</OutputType>
+    <OutputType>Library</OutputType>
+
+    <!-- NuGet package metadata -->
+    <PackageId>Wordnik.Client</PackageId>
+    <Version>0.1.0</Version>
+    <Authors>Artur Khutak</Authors>
+    <Company>Arty_Prof</Company>
+    <Description>Unofficial .NET client for the Wordnik API.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/ArtyProf/Wordnik.Dotnet.Client</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ArtyProf/Wordnik.Dotnet.Client</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>dotnet net csharp wordnik</PackageTags>
+
+    <!-- Signing -->
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>WordnikClientKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
