--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,7 +70,7 @@ jobs:
       # Step 6: Decode SNK File for signing
       - name: Decode SNK File
         shell: bash
-        run: echo "$SNK_FILE_BASE64" | base64 --decode > WordnikClientKey.snk
+        run: echo "$SNK_FILE_BASE64" | base64 --decode > ./src/Wordnik.Dotnet.Client/WordnikClientKey.snk
         env:
           SNK_FILE_BASE64: ${{ secrets.SNK_FILE_BASE64 }}
 
