revert changes and add specific path

--- a/src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
+++ b/src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
@@ -18,7 +18,7 @@
 
     <!-- Signing -->
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>../../WordnikClientKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>WordnikClientKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
