--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,12 +77,13 @@ jobs:
       # Step 7: Restore, Build, Sign, and Pack
       - name: Build, Sign, and Generate NuGet Package
         run: |
-          dotnet restore
-          dotnet build --configuration Release /p:SignAssembly=true /p:AssemblyOriginatorKeyFile=WordnikClientKey.snk ./src/Wordnik.Dotnet.Client/WordnikClientKey.snk
-          dotnet pack --configuration Release /p:SignAssembly=true /p:AssemblyOriginatorKeyFile=WordnikClientKey.snk ./src/Wordnik.Dotnet.Client/WordnikClientKey.snk
+          dotnet restore ./src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
+          dotnet build --configuration Release /p:SignAssembly=true /p:AssemblyOriginatorKeyFile=WordnikClientKey.snk ./src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
 
       # Step 8: Publish to NuGet
       - name: Publish NuGet Package
-        run: dotnet nuget push bin/Release/*.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json
+        run: |
+          dotnet pack --configuration Release /p:SignAssembly=true /p:AssemblyOriginatorKeyFile=WordnikClientKey.snk ./src/Wordnik.Dotnet.Client/Wordnik.Dotnet.Client.csproj
+          dotnet nuget push ./src/Wordnik.Dotnet.Client/bin/Release/*.nupkg --api-key "${{ secrets.NUGET_API_KEY }}" --source "https://api.nuget.org/v3/index.json"
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
