--- a/src/Wordnik.Client/Wordnik.Client.csproj
+++ b/src/Wordnik.Client/Wordnik.Client.csproj
@@ -25,10 +25,12 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+
+	  <None Include="../../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 	
   <ItemGroup>
-    <None Include="README.md" Pack="true" />
+    <None Include="../../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 	
 </Project>
