update demo versions to use proper nuget package * update tags for nuget package * update yml for the publishing flow, make it dependable on releases * add more unit tests

--- a/src/Wordnik.Client/Wordnik.Client.csproj
+++ b/src/Wordnik.Client/Wordnik.Client.csproj
@@ -6,27 +6,35 @@
 
     <!-- NuGet package metadata -->
     <PackageId>Wordnik.Client</PackageId>
-    <Version>0.1.4</Version>
+    <Version>$(Version)</Version>
     <Authors>Artur Khutak</Authors>
     <Company>Arty_Prof</Company>
     <Description>Unofficial .NET client for the Wordnik API.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/ArtyProf/Wordnik.Dotnet.Client</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/ArtyProf/Wordnik.Dotnet.Client</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/ArtyProf/Wordnik.Client</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ArtyProf/Wordnik.Client</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>dotnet net csharp wordnik</PackageTags>
+    <PackageTags>dotnet net csharp wordnik dictionary thesaurus</PackageTags>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
-
+    <ReleaseNotes>$(ReleaseNotes)</ReleaseNotes>
+	  
     <!-- Signing -->
 	<SignAssembly Condition="'$(SignAssemblyCondition)' == 'true'">true</SignAssembly>
 	<AssemblyOriginatorKeyFile Condition="'$(SignAssemblyCondition)' == 'true'">WordnikClientKey.snk</AssemblyOriginatorKeyFile>
+	  
+	<AssemblyTitle>Wordnik Client</AssemblyTitle>
+    <AssemblyDescription>$(Description)</AssemblyDescription>
+    <AssemblyCopyright>Copyright © Artur Khutak</AssemblyCopyright>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+    <InformationalVersion>$(Version)</InformationalVersion>
+	
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-
-	  <None Include="../../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 	
   <ItemGroup>
