--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,10 +24,14 @@ jobs:
       # Step 3: Restore, Build, and Pack the NuGet Package
       - name: Build and Pack NuGet Package
         run: |
+          TAG_NAME="${{ github.event.release.tag_name }}"
+          VERSION=${TAG_NAME#v}
+          echo "Extracted VERSION: $VERSION"
+
           dotnet restore ./src/Wordnik.Client/Wordnik.Client.csproj
           dotnet build --configuration Release /p:SignAssemblyCondition=true /p:AssemblyOriginatorKeyFile=WordnikClientKey.snk ./src/Wordnik.Client/Wordnik.Client.csproj
           dotnet pack --configuration Release ./src/Wordnik.Client/Wordnik.Client.csproj \
-            /p:Version=${{ github.event.release.tag_name }} \
+            /p:Version="$VERSION" \
             /p:ReleaseNotes="${{ github.event.release.body }}"
 
       # Step 4: Publish to NuGet
