--- a/Wordnik.Client/Wordnik.Client.csproj
+++ b/Wordnik.Client/Wordnik.Client.csproj
@@ -14,9 +14,9 @@
     <PackageProjectUrl>https://github.com/ArtyProf/Wordnik.Client</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ArtyProf/Wordnik.Client</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>dotnet net csharp wordnik dictionary thesaurus</PackageTags>
+    <PackageTags>dotnet net csharp wordnik dictionary thesaurus word words</PackageTags>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
-    <ReleaseNotes>$(ReleaseNotes)</ReleaseNotes>
+	<PackageReleaseNotes>$(ReleaseNotes)</PackageReleaseNotes>
 	  
     <!-- Signing -->
 	<SignAssembly Condition="'$(SignAssemblyCondition)' == 'true'">true</SignAssembly>
@@ -38,7 +38,7 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <None Include="../../README.md" Pack="true" PackagePath="\"/>
+    <None Include="../README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 	
 </Project>
