--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,18 +21,18 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up .NET SDK
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 8.0 
 
       # Step 3: Restore dependencies for all projects
       - name: Restore dependencies
-        run: dotnet restore Wordnik.Client.sln
+        run: dotnet restore ./Wordnik.Client.sln
 
       # Step 4: Build the entire solution, including both test projects
       - name: Build solution
-        run: dotnet build Wordnik.Client.sln --no-restore
+        run: dotnet build ./Wordnik.Client.sln --no-restore
 
       # Step 5: Run Unit Tests
       - name: Run Unit Tests
