--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
       # Step 6: Start SonarCloud Analysis
       - name: Start SonarCloud Analysis
         run: |
-          dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT }}" /d:sonar.organization="${{ secrets.SONAR_OWNER }}" \
+          dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT }}" /o:"${{ secrets.SONAR_OWNER }}" \
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.sources="src/Wordnik.Client" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
