--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,8 @@ jobs:
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.cs.vscoveragexml.reportsPaths="coverage.opencover.xml" \
-          /d:sonar.coverageReportPaths="coverage.opencover.xml"
+          /d:sonar.cs.vscoveragexml.reportsPaths="../coverage.opencover.xml" \
+          /d:sonar.coverageReportPaths="../coverage.opencover.xml"
 
       # Step 7: Build the Wordnik.Client project
       - name: Build Wordnik.Client
@@ -51,7 +51,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build --collect:"XPlat Code Coverage" --results-directory .
+          --no-build --collect:"XPlat Code Coverage" --results-directory ..
 
       # Step 9: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
