--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.coverageReportPaths="coverage.cobertura.xml"
+          /d:sonar.coverageReportPaths="./coverage-results/coverage.cobertura.xml"
 
       # Step 7: Build the Wordnik.Client project
       - name: Build Wordnik.Client
@@ -50,7 +50,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build --collect:"XPlat Code Coverage" --results-directory .
+          --no-build --collect:"XPlat Code Coverage" --results-directory "./coverage-results"
 
       - name: Verify Coverage Report Location
         run: ls -l
