--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,10 +50,13 @@ jobs:
       - name: Run Unit Tests
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build --collect:"XPlat Code Coverage" --results-directory .
-
+          --no-build --collect:"XPlat Code Coverage" --results-directory coverage-results
+      - name: Verify Coverage File
+        run: |
+          echo "Searching for coverage.cobertura.xml..."
+          find . -name "coverage.cobertura.xml"
       - name: Verify Coverage Report Location
-        run: ls -l
+        run: ls -l ./coverage-results
       # Step 9: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
         env:
