--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,7 @@ jobs:
           dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT }}" /o:"${{ secrets.SONAR_OWNER }}" \
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.coverageReportPaths="**/coverage.cobertura.xml"
+          /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**"
 
       # Step 7: Build the Wordnik.Client project
       - name: Build Wordnik.Client
@@ -51,19 +50,21 @@ jobs:
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
           --no-build --collect:"XPlat Code Coverage" --results-directory coverage-results
-      - name: Verify Coverage File
-        run: |
-          echo "Searching for coverage.cobertura.xml..."
-          find . -name "coverage.cobertura.xml"
-      - name: Verify Coverage Report Location
-        run: ls -l ./coverage-results
-      # Step 9: Complete SonarCloud Analysis
-      - name: End SonarCloud Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
 
-      # Step 10: Run Integration Tests
+      # Step 9: Locate coverage report file
+      - name: Locate Coverage Report
+        run: |
+          COVERAGE_PATH=$(find ./coverage-results -name "coverage.cobertura.xml")
+          echo "Coverage report detected at: $COVERAGE_PATH"
+          echo "coverage_path=$COVERAGE_PATH" >> $GITHUB_ENV
+
+      # Step 10: Complete SonarCloud Analysis
+      - name: End SonarCloud Analysis
+        run: |
+          dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
+          /d:sonar.coverageReportPaths="$coverage_path"
+
+      # Step 11: Run Integration Tests
       - name: Run Integration Tests
         env:
           Wordnik__ApiKey: ${{ secrets.WORDNIK_API_KEY }}
