--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.coverageReportPaths="coverage-results/coverage.opencover.xml"
+          /d:sonar.coverageReportPaths="Tests/Wordnik.Client.UnitTests/coverage.opencover.xml"
 
       # Step 7: Build the Wordnik.Client project
       - name: Build Wordnik.Client
@@ -50,12 +50,12 @@ jobs:
       - name: Run Unit Tests
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --results-directory coverage-results
+          --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --results-directory .
 
       # Step 9: Locate coverage report file
       - name: Locate Coverage Report
         run: |
-          ls -l ./coverage-results
+          ls -l ./Tests/Wordnik.Client.UnitTests/
 
       # Step 10: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
