--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="./Tests/Wordnik.Client.UnitTests/coverage.opencover.xml"
+          --no-build --blame /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="./Tests/Wordnik.Client.UnitTests/coverage.opencover.xml"
 
       # Step 9: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
