--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,14 @@ jobs:
 
     steps:
       # Step 1: Check out the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # Step 2: Set up .NET SDK
       - name: Set up .NET
@@ -31,26 +37,28 @@ jobs:
 
       # Step 5: Install SonarCloud Scanner
       - name: Install SonarCloud Scanner
-        run: dotnet tool install --global dotnet-sonarscanner
+        run: |
+          dotnet tool install --global dotnet-sonarscanner
+          dotnet tool install --global dotnet-coverage
 
       # Step 6: Start SonarCloud Analysis
       - name: Start SonarCloud Analysis
         run: |
           dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT }}" /o:"${{ secrets.SONAR_OWNER }}" \
           /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
+          /d:sonar.host.url="https://sonarcloud.io" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.cs.opencover.reportsPaths="./Tests/Wordnik.Client.UnitTests/coverage.opencover.xml"
+          /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
 
       # Step 7: Build the Wordnik.Client project
       - name: Build Wordnik.Client
-        run: dotnet build ./Wordnik.Client/Wordnik.Client.csproj --no-restore
+        run: dotnet build ./Wordnik.Client/Wordnik.Client.csproj --no-restore --no-incremental
 
       # Step 8: Run Unit Tests with Coverage
       - name: Run Unit Tests
         run: |
-          dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj \
-          --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="./Tests/Wordnik.Client.UnitTests/coverage.opencover.xml"
+          dotnet-coverage collect "dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj" -f xml -o "coverage.xml"
 
       # Step 9: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
