fix sonar Security Hotspots

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,9 +17,9 @@ jobs:
 
       # Step 2: Decode SNK File for signing
       - name: Decode SNK File
-        run: echo "$SNK_FILE_BASE64" | base64 --decode > ./Wordnik.Client/WordnikClientKey.snk
         env:
           SNK_FILE_BASE64: ${{ secrets.SNK_FILE_BASE64 }}
+        run: echo "$SNK_FILE_BASE64" | base64 --decode > ./Wordnik.Client/WordnikClientKey.snk
 
       # Step 3: Restore, Build, and Pack the NuGet Package
       - name: Build and Pack NuGet Package
@@ -36,9 +36,9 @@ jobs:
 
       # Step 4: Publish to NuGet
       - name: Publish to NuGet
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: |
           dotnet nuget push ./Wordnik.Client/bin/Release/*.nupkg \
             --source "https://api.nuget.org/v3/index.json" \
-            --api-key "${{ secrets.NUGET_API_KEY }}"
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+            --api-key "$NUGET_API_KEY"
