--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available.
-      - uses: actions/checkout@v4
+      # Step 1: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -25,47 +21,60 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8.0 
+          dotnet-version: 8.0
 
-      # Step 3: Restore dependencies for all projects
+      # Step 3: Set up Java
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu'
+
+      # Step 4: Restore dependencies for all projects
       - name: Restore dependencies
         run: dotnet restore ./Wordnik.Client.sln
 
-      # Step 4: Build the entire solution, including both test projects
+      # Step 5: Build the entire solution, including both test projects
       - name: Build solution
         run: dotnet build ./Wordnik.Client.sln --no-restore
 
-      # Step 5: Install SonarCloud Scanner
+      # Step 6: Install SonarCloud Scanner
       - name: Install SonarCloud Scanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
           dotnet tool install --global dotnet-coverage
 
-      # Step 6: Start SonarCloud Analysis
+      # Step 7: Start SonarCloud Analysis
       - name: Start SonarCloud Analysis
+        env:
+          SONAR_PROJECT: ${{ secrets.SONAR_PROJECT }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_OWNER: ${{ secrets.SONAR_OWNER }}
         run: |
-          dotnet-sonarscanner begin /k:"${{ secrets.SONAR_PROJECT }}" /o:"${{ secrets.SONAR_OWNER }}" \
-          /d:sonar.login="${{ secrets.SONAR_TOKEN }}" \
+          dotnet-sonarscanner begin /k:"$SONAR_PROJECT" /o:"$SONAR_OWNER" \
+          /d:sonar.login="$SONAR_TOKEN" \
           /d:sonar.host.url="https://sonarcloud.io" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
 
-      # Step 7: Build the Wordnik.Client project
+      # Step 8: Build the Wordnik.Client project
       - name: Build Wordnik.Client
         run: dotnet build ./Wordnik.Client/Wordnik.Client.csproj --no-restore --no-incremental
 
-      # Step 8: Run Unit Tests with Coverage
+      # Step 9: Run Unit Tests with Coverage
       - name: Run Unit Tests
         run: |
           dotnet-coverage collect "dotnet test Tests/Wordnik.Client.UnitTests/Wordnik.Client.UnitTests.csproj" -f xml -o "coverage.xml"
 
-      # Step 9: Complete SonarCloud Analysis
+      # Step 10: Complete SonarCloud Analysis
       - name: End SonarCloud Analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 
-      # Step 10: Run Integration Tests
+      # Step 11: Run Integration Tests
       - name: Run Integration Tests
         env:
           Wordnik__ApiKey: ${{ secrets.WORDNIK_API_KEY }}
