--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build solution
         run: dotnet build ./Wordnik.Client.sln --no-restore
 
-      # Step 6: Install SonarCloud Scanner
+      # Step 6: Install SonarCloud Scanner and Dotnet Coverage
       - name: Install SonarCloud Scanner
         run: |
           dotnet tool install --global dotnet-sonarscanner
@@ -50,6 +50,7 @@ jobs:
           SONAR_PROJECT: ${{ secrets.SONAR_PROJECT }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_OWNER: ${{ secrets.SONAR_OWNER }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           dotnet-sonarscanner begin /k:"$SONAR_PROJECT" /o:"$SONAR_OWNER" \
           /d:sonar.login="$SONAR_TOKEN" \
