--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,13 +23,6 @@ jobs:
         with:
           dotnet-version: 8.0
 
-      # Step 3: Set up Java SDK
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: 17
-          distribution: 'zulu'
-
       # Step 4: Restore dependencies for all projects
       - name: Restore dependencies
         run: dotnet restore ./Wordnik.Client.sln
@@ -57,10 +50,7 @@ jobs:
           /d:sonar.host.url="https://sonarcloud.io" \
           /d:sonar.exclusions="Demo/**,Tests/Wordnik.Client.IntegrationTests/**" \
           /d:sonar.test.exclusions="Tests/Wordnik.Client.IntegrationTests/**" \
-          /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml" \
-          /d:sonar.pullrequest.key="${{ github.event.pull_request.number }}" \
-          /d:sonar.pullrequest.branch="${{ github.head_ref }}" \
-          /d:sonar.pullrequest.base="${{ github.base_ref }}"
+          /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
 
       # Step 8: Build the Wordnik.Client project
       - name: Build Wordnik.Client
