--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,10 @@ jobs:
       - name: Build Blazor WASM project with docs
         run: |
           dotnet publish Docs/Wordnik.Client.Docs.csproj -c Release -o Docs/build
-
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. 
+      # Allow files and folders starting with an underscore.
+      - name: Add .nojekyll file
+        run: touch Docs/build/.nojekyll
       # Step 4: Deploy generated files to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
