add rewrite base href

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Build Blazor WASM project with docs
         run: |
           dotnet publish Docs/Wordnik.Client.Docs.csproj -c Release -o Docs/build
+
+      - name: Rewrite base href
+        uses: SteveSandersonMS/ghaction-rewrite-base-href@v1.1.0
+        with:
+          html_path: Docs/build/index.html
+          base_href: /Wordnik.Client/
+
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. 
       # Allow files and folders starting with an underscore.
       - name: Add .nojekyll file
